--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
         </section>
             <div class="lado_direito">
-                <a class="menu_direito" href=""><img src="Imagens/acessibilidade.jpeg" alt="acessibilidade" id="acessibilidade"> Become a Caregiver</a>
-                <a class="menu_direito" href=""><img src="Imagens/login.jpeg" alt="login" id="imagem_login"> Log in</a>
+                <a class="menu_direito" href=""><img src="acessibilidade.jpeg" alt="acessibilidade" id="acessibilidade"> Become a Caregiver</a>
+                <a class="menu_direito" href=""><img src="login.jpeg" alt="login" id="imagem_login"> Log in</a>
                 <a  class="botao" href="">Sign up</a>
             </div>
     </header>
@@ -32,10 +32,10 @@
             <h1 class="conteudo_titulo2">Walter with Wag!</h1>
             <p class="conteudo_paragrafo">Join our comunnity of over 351K Pet Caregivers nationwide</p>
             <div class="imagens_circulo">
-                <img src="Imagens/cao1.jpeg" id="cachorro_1" alt="" class="imagens_animais">
-                <img src="Imagens/gato1.jpeg" id="gato_1" alt="" class="imagens_animais">
-                <img src="Imagens/cao2.jpeg" id="cachorro_2" alt="" class="imagens_animais">
-                <img src="Imagens/gato2.jpeg" id="gato_2" alt="" class="imagens_animais">
+                <img src="cao1.jpeg" id="cachorro_1" alt="" class="imagens_animais">
+                <img src="gato1.jpeg" id="gato_1" alt="" class="imagens_animais">
+                <img src="cao2.jpeg" id="cachorro_2" alt="" class="imagens_animais">
+                <img src="gato2.jpeg" id="gato_2" alt="" class="imagens_animais">
             </div>
         </section>
         <section class="formulario">
@@ -47,7 +47,7 @@
             </div>
             <div class="quadrado">
                 <div class="texto_quadrado">
-                    <img class="img_qrcode" src="Imagens/qrcode.png" alt="qrcode">
+                    <img class="img_qrcode" src="qrcode.png" alt="qrcode">
                     <p class="texto_quadrado1">Approved Coregiver?</p>
                     <p class="texto_quadrado1">Download the app</p>
                 </div>
